<?xml version="1.0" encoding="UTF-8"?>
<project
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd"
	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
	<modelVersion>4.0.0</modelVersion>
	<!--<parent> <groupId>msi.gama</groupId> <artifactId>msi.gama.parent</artifactId> 
		<version>1.8.2-SNAPSHOT</version> <relativePath>../msi.gama.parent/</relativePath> 
	</parent> -->
	<groupId>msi.gama</groupId>
	<artifactId>msi.gama.processor</artifactId>
	<version>1.8.2-SNAPSHOT</version>
	<distributionManagement>
		<repository>
			<uniqueVersion>false</uniqueVersion>
			<id>p2Repo</id>
			<url>scp://51.255.46.42/./var/www/gama_updates/1.8.2</url>
		</repository>
		<snapshotRepository>
			<uniqueVersion>false</uniqueVersion>
			<id>p2Repo</id>
			<url>scp://51.255.46.42/./var/www/gama_updates/1.8.2</url>
		</snapshotRepository>
	</distributionManagement>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<tycho.version>2.6.0</tycho.version>
		<jdk.version>17</jdk.version>
	</properties>

	<profiles>
		<!-- This profile is used while local compiling
		Prevent signing error while env variable is not set -->
		<profile>
			<id>local-dev</id>
		</profile>

		<!-- This profile is used to upload the repo -->
		<profile>
			<id>p2Repo</id>
			<properties>
				<!-- Properties relative to the distant host where to upload the repo -->
				<ftp.url>scp://51.255.46.42</ftp.url>
				<ftp.toDir>./var/www/gama_updates/1.8.2</ftp.toDir>
				<!-- Relative path to the repo being uploaded -->
				<repo.path>${project.build.directory}/repository/</repo.path>
			</properties>

			<activation>
				<file>
					<exists>../sign.maven</exists>
				</file>
			</activation>

			<build>
				<plugins>

					<!-- Upload the repo to the server -->
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>wagon-maven-plugin</artifactId>
						<version>1.0</version>
						<executions>
							<execution>
								<id>p2Repo</id>
								<phase>deploy</phase>
								<goals>
									<goal>upload</goal>
								</goals>
								<configuration>
									<rules>
										<requireFilesSize>
											<maxsize>50000</maxsize>
											<minsize>90</minsize>
										</requireFilesSize>
									</rules>
									<fromDir>${repo.path}</fromDir>
									<includes>**</includes>
									<toDir>${ftp.toDir}</toDir>
									<url>${ftp.url}</url>
									<serverId>p2Repo</serverId>
									<!-- Points to your settings.xml where the connection settings are 
									stored as shown below -->
									<!-- <server> -->
									<!-- <id>p2Repo</id> -->
									<!-- <username>username</username> -->
									<!-- <password>password</password> -->
									<!-- </server> -->
								</configuration>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-jarsigner-plugin</artifactId>
						<version>3.0.0</version>
						<executions>
							<execution>
								<id>sign</id>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
						<configuration>
							<keystore>~/gama.keystore</keystore>
							<alias>gama-platform</alias>
							<storepass>GAMA_STORE</storepass>
							<keypass></keypass>
						</configuration>
					</plugin>

				</plugins>
			</build>
		</profile>
	</profiles>


	<build>
		<extensions>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh-external</artifactId>
				<version>3.5.1</version>
			</extension>
			<extension>
				<groupId>org.apache.maven.wagon</groupId>
				<artifactId>wagon-ssh</artifactId>
				<version>3.5.1</version>
			</extension>
		</extensions>

		<!-- <plugins combine.self="override"> -->
		<plugins>
			<plugin>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>2.5</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.wagon</groupId>
						<artifactId>wagon-ssh</artifactId>
						<version>3.5.1</version>
					</dependency>
				</dependencies>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-compiler-plugin</artifactId>
				<version>${tycho.version}</version>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgument>-warn:+discouraged,forbidden</compilerArgument>
					<useProjectSettings>false</useProjectSettings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>tycho-maven-plugin</artifactId>
				<version>${tycho.version}</version>
				<extensions>true</extensions>
				<configuration>
					<source>${jdk.version}</source>
					<target>${jdk.version}</target>
					<compilerArgument>-proc:none</compilerArgument>
				</configuration>
				<!-- FIX the JDT core due to bug in tycho https://www.eclipse.org/forums/index.php/t/1068443/ -->
			</plugin>
			<plugin>
				<groupId>org.eclipse.tycho</groupId>
				<artifactId>target-platform-configuration</artifactId>
				<version>${tycho.version}</version>				 
			</plugin>
		</plugins>
	</build>
	<packaging>eclipse-plugin</packaging>
</project>


